fix z-index

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 3000;
   width: 100%;
   height: 100%;
   -ms-content-zooming: none;
